fix: sidebar header text being cut off

--- a/src/sidebars/internal-components/maja-sidebar-heading/maja-sidebar-heading.css
+++ b/src/sidebars/internal-components/maja-sidebar-heading/maja-sidebar-heading.css
@@ -8,4 +8,6 @@
   border-bottom: 1px solid var(--maja-ui-shadow-colour);
   margin-top: var(--maja-negative-margin);
   padding-right: var(--maja-margin--large);
+  flex-shrink: 0;
+  overflow: hidden;
 }
